# spirescope

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_DIST.txt  SECURITY.md  THIRD_PARTY_NOTICES.md  build.py  pyproject.toml  spirescope.spec  tests.json
.githooks/: commit-msg  pre-commit  pre-push
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  data-release.yml  no-ai-attribution.yml  release-macos.yml  release.yml
docs/: DATA_MAINTENANCE.md  DATA_SOURCES.md  NEW_CHARACTER_PLAYBOOK.md  index.html  project-guidance.md
scripts/: fix_card_rarity.py
sts2/: __init__.py  __main__.py  aggregate.py  analytics.py  app.py  behavior.py  cascade.py  community.py  config.py  drift.py  fetcher.py  ghost.py  graveyard.py  hypothesis.py  i18n.py  integrity.py  knowledge.py  logparser.py  models.py  patches.py  pheromone.py  prophecy.py  rivalry.py  routes.py  saves.py  scraper.py  sources.py  spectral.py  sync.py  updater.py  watcher.py
sts2/community/: __init__.py  _merge.py  _types.py  reddit.py  steam.py
sts2/data/: badges.json  cards.json  enemies.json  epochs.json  events.json  last_updated.txt  patches.json  potions.json  relics.json  strategy.json
sts2/data/mods/: README.md
sts2/locales/: en.json  zht.json
sts2/static/: collections.js  compare.js  deck.js  live.js  nav.js  overlay.js  shortcuts.js  style.css  theme-init.js
sts2/static/fonts/: OFL.txt
sts2/templates/: _filter_bar.html  admin_patches.html  analytics.html  base.html  card_detail.html  cards.html  collections.html  community.html  compare.html  deck.html  enemies.html  enemy_detail.html  epochs.html  error.html  events.html  graveyard.html  guide.html  hypothesis.html  index.html  live.html  overlay.html  potions.html  prophecy.html  records.html  relic_detail.html  relics.html  run_detail.html  run_export.html  runs.html  search.html  settings.html  strategy.html
tests/: conftest.py  test_app.py  test_browser.py  test_cli.py  test_community_sources.py  test_data_pipeline.py  test_enchantments.py  test_era_analytics.py  test_fetcher.py  test_knowledge.py  test_logparser.py  test_multidir_saves.py  test_patches.py  test_saves.py  test_scraper.py  test_sync.py  test_updater.py  test_v2_features.py  test_v3_wireups.py  test_watcher.py
