[project]
name = "spirescope"
version = "2.8.1"
description = "Spirescope — a local web dashboard for Slay the Spire 2. Card/relic/enemy lookup, deck analysis, live run tracking, and strategy guides."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Thomas Albrecht", email = "thequantumfalcon@users.noreply.github.com"}]
keywords = ["slay-the-spire", "slay-the-spire-2", "dashboard", "deck-analysis", "live-tracking", "companion-app"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/thequantumfalcon/spirescope"
Repository = "https://github.com/thequantumfalcon/spirescope"
Issues = "https://github.com/thequantumfalcon/spirescope/issues"
Changelog = "https://github.com/thequantumfalcon/spirescope/blob/master/CHANGELOG.md"

[project.scripts]
spirescope = "sts2.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "ruff>=0.4.0",
    "pyinstaller>=6.0",
]
browser = [
    "pytest-playwright>=0.4.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sts2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
markers = ["browser: Playwright browser tests (requires installed browsers)"]
addopts = "-m 'not browser'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E501"]
